# axum-example

./: Cargo.toml  app.properties
package-01-simple-get-post/: Cargo.toml
package-02-axum-keycloak/: Cargo.toml  docker-compose.yml
package-02-axum-keycloak/src/: main.rs
package-03-poc-post-mongo/: Cargo.toml  bench.sh  data.json  raw_requests.http  result_with_insert_in_db.txt  result_without_insert_in_db.txt
package-03-poc-post-mongo/src/: main.rs
package-03-search_in_files/: Cargo.toml
package-03-search_in_files/src/: main.rs
package-04-actix-poc/: Cargo.toml  raw_requests.http  result_with_insert_in_db.txt
package-04-actix-poc/src/: main.rs
package-05-search_in_files/: Cargo.toml
package-05-search_in_files/src/: main.rs
